Initial version for preliminary results

--- a/DeLeon-Berne/plot_LDs_deleonberne.ipynb
+++ b/DeLeon-Berne/plot_LDs_deleonberne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section $(x, p_x)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +76,9 @@
      "output_type": "stream",
      "text": [
       "Using matplotlib backend: MacOSX\n",
-      "[-5.83780e-01  1.43487e+00  4.04000e-03 -9.88460e+00  9.88460e+00\n",
-      "  1.97700e-02  0.00000e+00  3.00000e+01  1.00000e-02  6.00000e+00]\n",
-      "96.77310402248112 172.86319148589297\n"
+      "[-2.3979e-01  1.9061e-01  8.6000e-04 -5.0878e+00  5.0878e+00  1.0180e-02\n",
+      "  0.0000e+00  7.0000e+01  1.0000e-02  1.5000e+00]\n",
+      "16.699816617071452 361.7201319321596\n"
      ]
     }
    ],
@@ -104,27 +111,38 @@
     "# xRes = 1000\n",
     "# yRes = 2000\n",
     "# tau = 30\n",
+    "# xRes = 500\n",
+    "# yRes = 1000\n",
     "xRes = 500\n",
     "yRes = 1000\n",
-    "tau = 30\n",
-    "total_energy = 6.000\n",
+    "tau = 30.0\n",
+    "total_energy = 1.500\n",
     "\n",
-    "overlay_smani_flag = False # for forward LD\n",
-    "overlay_unmani_flag = True # for backward LD\n",
+    "overlay_smani_flag = False  #for forward LD\n",
+    "overlay_unmani_flag = True #for backward LD\n",
+    "\n",
+    "forward_LD_flag = False\n",
+    "backward_LD_flag = True\n",
+    "\n",
+    "# overlay_smani_flag = True  #for forward LD\n",
+    "# overlay_unmani_flag = False #for backward LD\n",
+    "\n",
+    "# forward_LD_flag = True\n",
+    "# backward_LD_flag = False\n",
     "\n",
     "deltaE_val = total_energy - 1.0\n",
     "zeta_lambda_comb = ['fig3A1/','fig3A2/','fig3B1/','fig3B2/','fig3C1/','fig3C2/']\n",
-    "k = 0\n",
+    "k = 5\n",
     "\n",
-    "data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3A1/E6-000/xpx_sosatyw/\"\n",
+    "data_path = \"../../data-figures/DeLeon-Berne/LDs/xpx_sosatyw/\" + zeta_lambda_comb[k] + \"E1-510/\"\n",
     "# data_path = \"../../data/DeLeon-Berne/LDs/fig3A2/E1-510/xpx_sosatyw/\"\n",
     "# data_path = \"../../data/DeLeon-Berne/LDs/fig3B2/E1-510/xpx_sosatyw/\"\n",
     "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E1-510/xpx_sosatyw/\"\n",
     "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E7-000/xpx_sosatyw/\"\n",
     "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E4-500/xpx_sosatyw/\"\n",
-    "# data_path = \"../../src/\"\n",
+    "# data_path = \"../\"\n",
     "\n",
-    "if overlay_smani_flag:\n",
+    "if forward_LD_flag:\n",
     "    filename = 'forward_lag_desc_deleonberne_E%.3f'%(total_energy) + '_x-px_tau%d'%(tau) + '.png'\n",
     "    try:\n",
     "        MMesh = np.genfromtxt(data_path + \"deleonberne_forwM\" + \n",
@@ -137,8 +155,7 @@
     "                          \".txt\",delimiter=\"\\t\")\n",
     "        \n",
     "        \n",
-    "        \n",
-    "if overlay_unmani_flag:\n",
+    "if backward_LD_flag:\n",
     "    filename = 'backward_lag_desc_deleonberne_E%.3f'%(total_energy) + '_x-px_tau%d'%(tau) + '.png'\n",
     "    try:\n",
     "        MMesh = np.genfromtxt(data_path + \"deleonberne_backM\" + \n",
@@ -214,7 +231,247 @@
     "                       ticks = [min_MMesh, max_MMesh])\n",
     "# cbar = fig_cf.colorbar(cf, shrink = 0.7, pad = 0.05, \n",
     "#                        ticks = np.arctan([min_MMesh, max_MMesh]))\n",
-    "cbar.ax.set_yticklabels(['Min', 'Max'])\n",
+    "# cbar.ax.set_yticklabels(['Min', 'Max'])\n",
+    "# cbar.set_label('LD',labelpad = 0)\n",
+    "# cbar.set_label('LD',labelpad = -40)\n",
+    "\n",
+    "# norm= mpl.colors.Normalize(vmin=cf.cvalues.min(), vmax=cf.cvalues.max())\n",
+    "# sm = plt.cm.ScalarMappable(norm=norm, cmap = cf.cmap)\n",
+    "# sm.set_array([])\n",
+    "# cbar = fig_cf.colorbar(sm, shrink = 0.7, pad = 0.05, \n",
+    "#                        ticks = [min_MMesh, max_MMesh])\n",
+    "# cbar.ax.set_yticklabels(['Min', 'Max'])\n",
+    "# cbar.set_label('LD')\n",
+    "\n",
+    "# cbar.set_clim(100, 400)\n",
+    "# cbar.set_clim(400,600)\n",
+    "# ax_cf.set_aspect('equal')\n",
+    "# ax_cf.set_xlim([-0.5, 0.5])\n",
+    "# ax_cf.set_ylim([-5, 5])\n",
+    "# ax_cf.set_xlim([4.8, 6.0])\n",
+    "# ax_cf.set_ylim([-0.6, 0.6])\n",
+    "\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "\n",
+    "if overlay_smani_flag:\n",
+    "    \n",
+    "    smani_data_path = '/Users/OptimusPrime/Documents/reaction-dynamics/system-bath/' + \\\n",
+    "    'data-figures/DeLeon-Berne/reaction-fraction/stable-mani-top-well/'\n",
+    "    \n",
+    "    if (float(deltaE_val) - int(deltaE_val) < 1e-12):    \n",
+    "            mani = np.loadtxt(smani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_stable_branch1_eqPt1_DelE%.0f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "    else:\n",
+    "        try:\n",
+    "            mani = np.loadtxt(smani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_stable_branch1_eqPt1_DelE%.2f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "        except:\n",
+    "            mani = np.loadtxt(smani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_stable_branch1_eqPt1_DelE%.1f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "\n",
+    "#     mani = np.loadtxt(smani_data_path + zeta_lambda_comb[k] + \\\n",
+    "#                               'xeU1_stable_branch1_eqPt1_DelE%.2f'%(total_energy - 1.0) + \\\n",
+    "#                               '_deleonberne.txt')\n",
+    "\n",
+    "    ax_cf.plot(mani[:,0], mani[:,2],'-w',linewidth = 3)\n",
+    "\n",
+    "\n",
+    "if overlay_unmani_flag:\n",
+    "    \n",
+    "    unmani_data_path = '/Users/OptimusPrime/Documents/reaction-dynamics/system-bath/' + \\\n",
+    "        'data-figures/DeLeon-Berne/reaction-fraction/unstable-mani-top-well/'\n",
+    "\n",
+    "    if (float(deltaE_val) - int(deltaE_val) < 1e-12):    \n",
+    "            mani = np.loadtxt(unmani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_unstable_branch1_eqPt1_DelE%.0f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "    else:\n",
+    "        try:\n",
+    "            mani = np.loadtxt(unmani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_unstable_branch1_eqPt1_DelE%.2f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "        except:\n",
+    "            mani = np.loadtxt(unmani_data_path + zeta_lambda_comb[k] + \\\n",
+    "                              'xeU1_unstable_branch1_eqPt1_DelE%.1f'%(deltaE_val) + \\\n",
+    "                              '_deleonberne.txt')\n",
+    "\n",
+    "    ax_cf.plot(mani[:,0], mani[:,2],'-m',linewidth = 3)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# plt.savefig(data_path + filename, dpi = 300, bbox_inches = 'tight')\n",
+    "\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section $(y, p_y)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: MacOSX\n",
+      "[-1.18046e+00  1.18046e+00  4.72000e-03 -6.99746e+00  6.99746e+00\n",
+      "  1.39900e-02  0.00000e+00  3.00000e+01  1.00000e-02  3.00000e+00]\n",
+      "97.38734047422804 158.30902914018938\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#%%\n",
+    "\n",
+    "%matplotlib\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "from scipy.optimize import fsolve\n",
+    "\n",
+    "fal = 30 # fontsize axis labels\n",
+    "ftl = 20 # fontsize tick labels\n",
+    "mpl.rcParams['xtick.labelsize'] = ftl\n",
+    "mpl.rcParams['ytick.labelsize'] = ftl\n",
+    "# mpl.rcParams['ztick.labelsize'] = ftl\n",
+    "mpl.rcParams['axes.labelsize'] = fal\n",
+    "\n",
+    "\n",
+    "# xRes = 100\n",
+    "# yRes = 200\n",
+    "# tau = 30\n",
+    "# xRes = 1000\n",
+    "# yRes = 2000\n",
+    "# tau = 30\n",
+    "xRes = 500\n",
+    "yRes = 1000\n",
+    "tau = 30\n",
+    "total_energy = 3.000\n",
+    "\n",
+    "overlay_smani_flag = False  #for forward LD\n",
+    "overlay_unmani_flag = False #for backward LD\n",
+    "\n",
+    "forward_LD_flag = False\n",
+    "backward_LD_flag = True\n",
+    "\n",
+    "deltaE_val = total_energy - 1.0\n",
+    "zeta_lambda_comb = ['fig3A1/','fig3A2/','fig3B1/','fig3B2/','fig3C1/','fig3C2/']\n",
+    "k = 3\n",
+    "\n",
+    "data_path = \"../../data-figures/DeLeon-Berne/LDs/ypy_sosatx0/\" + zeta_lambda_comb[k] \n",
+    "# data_path = \"../../data/DeLeon-Berne/LDs/fig3A2/E1-510/xpx_sosatyw/\"\n",
+    "# data_path = \"../../data/DeLeon-Berne/LDs/fig3B2/E1-510/xpx_sosatyw/\"\n",
+    "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E1-510/xpx_sosatyw/\"\n",
+    "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E7-000/xpx_sosatyw/\"\n",
+    "# data_path = \"../../data-figures/DeLeon-Berne/LDs/fig3C2/E4-500/xpx_sosatyw/\"\n",
+    "# data_path = \"../\"\n",
+    "\n",
+    "if forward_LD_flag:\n",
+    "    filename = 'forward_lag_desc_deleonberne_E%.3f'%(total_energy) + '_y-py_tau%d'%(tau) + '.png'\n",
+    "    try:\n",
+    "        MMesh = np.genfromtxt(data_path + \"deleonberne_forwM\" + \n",
+    "                          str(yRes) + \"x\" + str(xRes) + \n",
+    "                          \"_finalT%.6f\"%(tau) + \".txt\",delimiter=\"\\t\")\n",
+    "    except:\n",
+    "        MMesh = np.genfromtxt(data_path + \"deleonberne_forwM\" + \n",
+    "                          str(yRes) + \"x\" + str(xRes) + \n",
+    "                          \"_finalT%.6f\"%(tau) + \"_E%.6f\"%(total_energy) + \n",
+    "                          \".txt\",delimiter=\"\\t\")\n",
+    "        \n",
+    "        \n",
+    "if backward_LD_flag:\n",
+    "    filename = 'backward_lag_desc_deleonberne_E%.3f'%(total_energy) + '_y-py_tau%d'%(tau) + '.png'\n",
+    "    try:\n",
+    "        MMesh = np.genfromtxt(data_path + \"deleonberne_backM\" + \n",
+    "                          str(yRes) + \"x\" + str(xRes) + \n",
+    "                          \"_finalT%.6f\"%(tau) + \".txt\",delimiter=\"\\t\")\n",
+    "    except:\n",
+    "        MMesh = np.genfromtxt(data_path + \"deleonberne_backM\" + \n",
+    "                      str(yRes) + \"x\" + str(xRes) + \n",
+    "                      \"_finalT%.6f\"%(tau) + \"_E%.6f\"%(total_energy) + \n",
+    "                      \".txt\",delimiter=\"\\t\")\n",
+    "\n",
+    "try:    \n",
+    "    params = np.loadtxt(data_path + 'params_deleonberne_M' + \n",
+    "                        str(yRes) + 'x' + str(xRes) + '_finalT%.6f'%(tau) + '.txt')\n",
+    "except:\n",
+    "    params = np.loadtxt(data_path + 'params_deleonberne_M' + \n",
+    "                        str(yRes) + 'x' + str(xRes) + '_finalT%.6f'%(tau) + \"_E%.6f\"%(total_energy) \n",
+    "                        + '.txt')\n",
+    "print(params)\n",
+    "\n",
+    "\n",
+    "xMin, xMax = params[:2]\n",
+    "yMin, yMax = params[3:5]\n",
+    "# xRes = int((params[1] - params[0])/params[2])\n",
+    "# yRes = int((params[4] - params[3])/params[5])\n",
+    "tau = int(params[7])\n",
+    "xVec = np.linspace(xMin, xMax, xRes+1)\n",
+    "yVec = np.linspace(yMin, yMax, yRes+1)\n",
+    "\n",
+    "xMesh, yMesh = np.meshgrid(xVec, yVec)\n",
+    "\n",
+    "\n",
+    "# MMesh = np.genfromtxt(\"../data/Barbanis-2dof-LDs/E16-375/test_Barbanis_M\" + \n",
+    "#                       str(xRes) + \"x\" + str(yRes) + \n",
+    "#                       \"_finalT\" + str(tau) + \".txt\",delimiter=\"\\t\")\n",
+    "\n",
+    "# MMesh = np.genfromtxt(data_path + \"Barbanis_M\" + str(xRes) + \"x\" + str(yRes) + \n",
+    "#                       \"_finalT\" + str(tau) + \".txt\", delimiter=\"\\t\")\n",
+    "# MMesh = np.genfromtxt(\"../src/Barbanis_escape\" + str(xRes) + \"x\" + str(yRes) + \n",
+    "#                       \"_finalT\" + str(tau) + \".txt\", delimiter=\"\\t\")\n",
+    "# MMesh = np.arctan(MMesh)\n",
+    "\n",
+    "min_MMesh, max_MMesh = find_max_min_nan_mat(MMesh)\n",
+    "print(min_MMesh, max_MMesh)\n",
+    "\n",
+    "# normi = mpl.colors.Normalize(vmin = min_MMesh, vmax = max_MMesh)\n",
+    "# normi = mpl.colors.Normalize(vmin = 140, vmax = 180)\n",
+    "# normi = mpl.colors.Normalize(vmin = 100, vmax = 500) # for E = 15.250, tau = 15\n",
+    "# normi = mpl.colors.Normalize(vmin = 400, vmax = 600) # for E = 15.250, tau = 50\n",
+    "# normi = mpl.colors.LogNorm(vmin = min_MMesh, vmax = max_MMesh)\n",
+    "\n",
+    "plt.close('all')\n",
+    "fig_cf = plt.figure(figsize=(8,8))\n",
+    "ax_cf = fig_cf.gca()\n",
+    "\n",
+    "# plt.plot(MMesh[:,300], '-r')\n",
+    "# cf = ax_cf.contourf(xMesh, yMesh, MMesh[:,:], \n",
+    "#                     xRes, norm = normi, cmap = 'viridis') # coolwarm\n",
+    "# cf = ax_cf.contourf(xMesh, yMesh, np.arctan(MMesh[:,:]), \n",
+    "#                     750, cmap = 'viridis')# coolwarm, RdGy, bone\n",
+    "# cf = ax_cf.contourf(xMesh, yMesh, MMesh[:,:], \n",
+    "#                     750, cmap = 'bone') # coolwarm, RdGy\n",
+    "# cf = ax_cf.contourf(xMesh, yMesh, MMesh[:,:], 100, cmap = 'copper') # winter, cool\n",
+    "\n",
+    "# cf = ax_cf.contourf(xMesh, yMesh, MMesh[:,:], 10, norm = normi,\n",
+    "#                     cmap = 'viridis')# coolwarm, RdGy, bone\n",
+    "cf = ax_cf.contourf(xMesh, yMesh, MMesh[:,:], 10, \n",
+    "                    cmap = 'viridis')# coolwarm, RdGy, bone\n",
+    "\n",
+    "ax_cf.set_xlabel(r'$y$',fontsize = fal)\n",
+    "# ax_cf.set_ylabel(r'$p_x$', rotation=0, fontsize = 50) \n",
+    "ax_cf.set_ylabel(r'$p_y$', fontsize = fal) \n",
+    "\n",
+    "\n",
+    "cbar = fig_cf.colorbar(cf, shrink = 0.7, pad = 0.05, \n",
+    "                       ticks = [min_MMesh, max_MMesh])\n",
+    "# cbar = fig_cf.colorbar(cf, shrink = 0.7, pad = 0.05, \n",
+    "#                        ticks = np.arctan([min_MMesh, max_MMesh]))\n",
+    "# cbar.ax.set_yticklabels(['Min', 'Max'])\n",
     "# cbar.set_label('LD',labelpad = 0)\n",
     "# cbar.set_label('LD',labelpad = -40)\n",
     "\n",
