--- a/DeLeon-Berne/plot_reaction_fraction.ipynb
+++ b/DeLeon-Berne/plot_reaction_fraction.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Post-processing-the-reactive-island-data\" data-toc-modified-id=\"Post-processing-the-reactive-island-data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Post-processing the reactive island data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Loading-the-manifold-intersection-data-(warning:-takes-a-bit-of-time)\" data-toc-modified-id=\"Loading-the-manifold-intersection-data-(warning:-takes-a-bit-of-time)-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Loading the manifold intersection data (warning: takes a bit of time)</a></span></li><li><span><a href=\"#Plotting-reaction-fraction-for-small-excess-energy\" data-toc-modified-id=\"Plotting-reaction-fraction-for-small-excess-energy-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Plotting reaction fraction for small excess energy</a></span></li><li><span><a href=\"#Loading-the-manifold-intersection-data-(warning:-takes-a-bit-of-time)\" data-toc-modified-id=\"Loading-the-manifold-intersection-data-(warning:-takes-a-bit-of-time)-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Loading the manifold intersection data (warning: takes a bit of time)</a></span></li><li><span><a href=\"#Plotting-reaction-fraction-for-large-excess-energy\" data-toc-modified-id=\"Plotting-reaction-fraction-for-large-excess-energy-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Plotting reaction fraction for large excess energy</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Post-processing the reactive island data\n",
@@ -11,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +33,6 @@
     "\"\"\"\n",
     "\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
-    "from scipy.optimize import fsolve\n",
     "\n",
     "from matplotlib import cm\n",
     "import matplotlib as mpl\n",
@@ -71,144 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Switch cases for different parameter values\n",
-    "\n",
-    "# Fig. 3-A1\n",
-    "# ALPHA = 0.20;\n",
-    "# LAMBDA = 1.00;\n",
-    "\n",
-    "# Fig. 3-A2\n",
-    "# ALPHA = 1.00;\n",
-    "# LAMBDA = 1.00;\n",
-    "\n",
-    "# Fig. 3-B1\n",
-    "# ALPHA = 1.00;\n",
-    "# LAMBDA = 1.30;\n",
-    "\n",
-    "# Fig. 3-B2\n",
-    "# ALPHA = 1.00;\n",
-    "# LAMBDA = 1.5;\n",
-    "\n",
-    "# % Fig. 3-C1\n",
-    "# % ALPHA = 1.00;\n",
-    "# % LAMBDA = 2.00;\n",
-    "\n",
-    "# % Fig. 3-C2\n",
-    "# ALPHA = 2.30;\n",
-    "# LAMBDA = 1.95;\n",
-    "\n",
-    "def px_zero(x, *args):\n",
-    "\n",
-    "    \"function to solve minimum and maximum x on the SOS y = yw\"\n",
-    "\n",
-    "    Eval, EPSILON, Dx, ALPHA, LAMBDA = args[0:]\n",
-    "    \n",
-    "    H = lambda x: (Dx*(1 - np.exp(-LAMBDA*x))**2 - np.exp(-ALPHA*LAMBDA*x) + EPSILON)\n",
-    "    \n",
-    "    return (Eval - H(x))\n",
-    "\n",
-    "def set_parameters(label):\n",
-    "    \n",
-    "    # ordering of the parameters: mass A, mass B, epsilon, Dx, alpha (z in paper), lambd\n",
-    "    massA = 8; massB = 8; EPSILON = 1.0; Dx = 10.0;\n",
-    "    \n",
-    "    if label == 'fig3A1/':\n",
-    "        ALPHA = 0.20;\n",
-    "        LAMBDA = 1.00;\n",
-    "    elif label == 'fig3A2/':\n",
-    "        ALPHA = 1.00;\n",
-    "        LAMBDA = 1.00;\n",
-    "    elif label == 'fig3B1/':\n",
-    "        ALPHA = 1.00;\n",
-    "        LAMBDA = 1.30;\n",
-    "    elif label == 'fig3B2/':\n",
-    "        ALPHA = 1.00;\n",
-    "        LAMBDA = 1.50;\n",
-    "    elif label == 'fig3C1/':\n",
-    "        ALPHA = 1.00;\n",
-    "        LAMBDA = 2.00;\n",
-    "    elif label == 'fig3C2/':\n",
-    "        ALPHA = 2.30;\n",
-    "        LAMBDA = 1.95;\n",
-    "    elif label == 'ZETA0.00-LAMBDA1.00/':\n",
-    "        ALPHA = 0.00;\n",
-    "        LAMBDA = 1.00;\n",
-    "    else:\n",
-    "        print('Incompatible arguments, check label string')\n",
-    "        \n",
-    "    params =  [massA, massB, EPSILON, Dx, ALPHA, LAMBDA]\n",
-    "    \n",
-    "    return params\n",
-    "        \n",
-    "        \n",
-    "def get_energybndry_intersect_sos(params, deltaEnergy, printflag):\n",
-    "    \n",
-    "    massA, massB, EPSILON, Dx, ALPHA, LAMBDA = params \n",
-    "    saddleEnergy = EPSILON\n",
-    "    \n",
-    "    totalEnergy = saddleEnergy + deltaEnergy\n",
-    "    \n",
-    "    H = lambda x: (Dx*(1 - np.exp(-LAMBDA*x))**2 - np.exp(-ALPHA*LAMBDA*x) + EPSILON)\n",
-    "        \n",
-    "    # minumum and maximum of the energy boundary's x coordinate on the sos\n",
-    "    xMax = fsolve(px_zero,  0.5, args = (totalEnergy,EPSILON, Dx, ALPHA, LAMBDA))\n",
-    "    xMin = fsolve(px_zero,  -1, args = (totalEnergy,EPSILON, Dx, ALPHA, LAMBDA))\n",
-    "#     print(xMin, xMax)\n",
-    "    \n",
-    "    xGrid = np.linspace(xMin,xMax,1000)\n",
-    "    \n",
-    "    pxGridPos = np.zeros(np.size(xGrid))\n",
-    "    pxGridNeg = np.zeros(np.size(xGrid))\n",
-    "    \n",
-    "    for i in range(np.size(xGrid)):\n",
-    "        if (totalEnergy > H(xGrid[i])):\n",
-    "            pxGridPos[i] = sp.sqrt((2*massA)*(totalEnergy - H(xGrid[i])))\n",
-    "            \n",
-    "            pxGridNeg[i] = -sp.sqrt((2*massA)*(totalEnergy - H(xGrid[i])))\n",
-    "            \n",
-    "    \n",
-    "#     print('Excess energy:', deltaEnergy)    \n",
-    "    \n",
-    "    if printFlag:\n",
-    "        fig = plt.figure(figsize=(6, 6))\n",
-    "        ax = fig.gca()\n",
-    "\n",
-    "    #     ax = axisH\n",
-    "    #     plt.rcParams['axes.labelweight'] = 'bold'\n",
-    "    #     plt.rcParams['ytick.major.size'] = 5    \n",
-    "    #     plt.rcParams['xtick.major.size'] = 5\n",
-    "\n",
-    "    #    ax.xaxis.set_ticks([0, 5, 10, 15])\n",
-    "    #    ax.yaxis.set_ticks(np.linspace(-80,80,9,endpoint=True,dtype=int))\n",
-    "\n",
-    "    #     ax.axis([0, rMax + 1, -80, 80])\n",
-    "    #     ax.set_xticklabels(ax.get_xticks(), weight='bold')\n",
-    "    #     ax.set_yticklabels(ax.get_yticks(), weight='bold')\n",
-    "\n",
-    "        ax.plot(xGrid, pxGridPos, linewidth = 2, color = 'm')\n",
-    "        ax.plot(xGrid, pxGridNeg, linewidth = 2, color = 'm')\n",
-    "\n",
-    "        ax.set_xlabel(r'$x$', fontsize = 25)\n",
-    "        ax.set_ylabel(r'$p_x$', fontsize = 25)\n",
-    "        plt.tick_params(axis = 'both', which = 'major', labelsize = 15)\n",
-    "        \n",
-    "        \n",
-    "    xGrid = np.append(xGrid, np.flip(xGrid,0))\n",
-    "    pxGrid = np.append(pxGridPos, np.flip(pxGridNeg,0))\n",
-    "    \n",
-    "#     print(np.shape(xGrid))\n",
-    "        \n",
-    "    return np.array([xGrid,pxGrid]).T\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +108,8 @@
     "\n",
     "deltaE_vals = np.arange(deltaE_start,deltaE_stop + deltaE_step,deltaE_step)\n",
     "\n",
-    "zeta_lambda_comb = ['ZETA0.00-LAMBDA1.00/','fig3A1/','fig3A2/','fig3B1/','fig3B2/','fig3C1/','fig3C2/']\n",
+    "# zeta_lambda_comb = ['ZETA0.00-LAMBDA1.00/','fig3A1/','fig3A2/','fig3B1/','fig3B2/','fig3C1/','fig3C2/']\n",
+    "zeta_lambda_comb = ['ZETA0.00-LAMBDA1.00/','fig3A1/','fig3B2/','fig3C2/']\n",
     "\n",
     "tubemani_intersect_area = np.zeros((len(deltaE_vals),len(zeta_lambda_comb)))\n",
     "energysurf_intersect_area = np.zeros((len(deltaE_vals),len(zeta_lambda_comb)))\n",
@@ -267,13 +138,10 @@
     "        # set parameters to calculate energy boundary on the section y = y_w\n",
     "        params = set_parameters(zeta_lambda_comb[k])\n",
     "\n",
-    "        energy_boundary = get_energybndry_intersect_sos(params, \n",
+    "        energy_boundary = DB2dof.get_energybndry_intersect_sos(params, \n",
     "                                                        deltaE_vals[i], printFlag)\n",
     "        \n",
     "        energysurf_intersect_area[i,k] = DB2dof.get_area_closed_curve(energy_boundary) \n",
-    "        \n",
-    "        \n",
-    "\n",
     "        "
    ]
   },
@@ -286,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +177,11 @@
     "mpl.rcParams['axes.labelsize'] = ls_axes\n",
     "\n",
     "\n",
-    "markertype = ['^-c','s-r','v-g','h-b','d-k','<-m','>-']\n",
+    "# markertype = ['^-c','s-r','v-g','h-b','d-k','<-m','>-']\n",
+    "if len(zeta_lambda_comb) == 4:\n",
+    "    markertype = ['^-c','s-r','d-k','>-']\n",
+    "\n",
+    "\n",
     "fig = plt.figure(figsize = (10,10))\n",
     "ax = fig.gca()\n",
     "\n",
@@ -326,58 +198,13 @@
     "    ax.legend(fontsize = ls_tick)\n",
     "\n",
     "\n",
+    "ax.set_ylim([-0.02, 0.52])\n",
     "ax.set_xlabel(r'Total energy, $E$', fontsize = ls_axes)\n",
-    "ax.set_ylabel(r'Reaction fraction, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
+    "# ax.set_ylabel(r'Reaction fraction, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
+    "ax.set_ylabel(r'Microcanonical reaction probability, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
     "\n",
-    "fig.savefig('temp.pdf', bbox_inches = 'tight')\n",
+    "# fig.savefig('temp.pdf', bbox_inches = 'tight')\n",
     "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualizing the reactive islands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.418232405019303 -0.36588592464709385\n",
-      "4.955804676874323 -4.955804676874323\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "plt.style.use('default')\n",
-    "mpl.rcParams['mathtext.fontset'] = 'cm'\n",
-    "mpl.rcParams['mathtext.rm'] = 'serif'\n",
-    "\n",
-    "plt.close('all')\n",
-    "params = set_parameters('fig3A2/')\n",
-    "# print(params)\n",
-    "deltaEnergy = 0.510\n",
-    "printFlag = True\n",
-    "energy_boundary = get_energybndry_intersect_sos(params, deltaEnergy, printFlag)\n",
-    "\n",
-    "# energy_boundary = get_energybndry_intersect_sos(params,\n",
-    "#                                                 deltaE_vals[i], printFlag)\n",
-    "\n",
-    "# fig = plt.figure(figsize = (8,8))\n",
-    "# ax = fig.gca()\n",
-    "# plt.plot(energy_boundary[:,0], energy_boundary[:,1],'-m')\n",
-    "# plt.plot(np.flip(energy_boundary[:,0],0), -np.flip(energy_boundary[:,1],0), '-k')\n",
-    "print(np.max(energy_boundary[:,0]),np.min(energy_boundary[:,0]))\n",
-    "print(np.max(energy_boundary[:,1]),np.min(energy_boundary[:,1]))\n",
     "\n"
    ]
   },
@@ -390,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: MacOSX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# print(tube_intersect_area)\n",
@@ -477,7 +296,7 @@
     "ax = fig.gca()\n",
     "\n",
     "for k in range(len(zeta_lambda_comb)):\n",
-    "    params = set_parameters(zeta_lambda_comb[k])\n",
+    "    params = DB2dof.set_parameters(zeta_lambda_comb[k])\n",
     "    \n",
     "#     ax.plot(deltaE_vals, tubemani_intersect_area[:,k], '-')\n",
     "    line_handle = ax.plot(params[2] + deltaE_vals, \\\n",
@@ -488,8 +307,10 @@
     "    ax.legend(fontsize = ls_tick)\n",
     "\n",
     "\n",
+    "ax.set_ylim([0.48,0.92])\n",
     "ax.set_xlabel(r'Total energy, $E$', fontsize = ls_axes)\n",
-    "ax.set_ylabel(r'Reaction fraction, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
+    "# ax.set_ylabel(r'Reaction fraction, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
+    "ax.set_ylabel(r'Microcanonical reaction probability, $T_{\\rm react}(E)$', fontsize = ls_axes)\n",
     "\n",
     "# fig.savefig('temp.pdf', bbox_inches = 'tight')\n",
     "plt.show()\n",
@@ -501,42 +322,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -577,6 +365,37 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": true,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": true,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
